--- a/styles/components/_slider.scss
+++ b/styles/components/_slider.scss
@@ -15,6 +15,11 @@
     background-repeat: no-repeat;
     opacity: 0;
     animation: fadeSlideshow 12s infinite;
+    animation-fill-mode: forwards;
+
+    will-change: opacity;
+    backface-visibility: hidden;
+    transform: translateZ(0);
   }
 
   &__slide:nth-child(1) {
@@ -34,13 +39,13 @@
   0% {
     opacity: 0;
   }
-  10% {
+  8% {
     opacity: 1;
   }
-  35% {
+  32% {
     opacity: 1;
   }
-  45% {
+  40% {
     opacity: 0;
   }
   100% {
