--- a/styles/components/navbar.scss
+++ b/styles/components/navbar.scss
@@ -64,12 +64,27 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding: 1rem 2rem;
     backdrop-filter: blur(5px);
-    padding: 1rem 5rem;
     position: relative;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
 
     &--logo {
+      height: 70px;
+      width: 180px;
+      background-image: url("media/logo.png");
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
+
+      img {
+        max-height: 100%;
+        width: auto;
+        height: auto;
+        object-fit: contain;
+      }
+
+
       &__title {
         font-size: clamp(1.2rem, 2vw, 1.5rem);
         margin: 0;
@@ -80,7 +95,7 @@
 
     &--menu {
       display: flex;
-      flex-wrap: wrap;
+      flex-wrap: nowrap;
       justify-content: center;
       align-items: center;
       gap: 1rem;
@@ -90,7 +105,6 @@
 
       &__item {
         position: relative;
-        flex: 1 1 auto;
         margin: 0 1vw;
 
         &__link {
@@ -113,8 +127,9 @@
       }
     }
 
-
     &--cta {
+      margin-left: auto;
+
       &__btn {
         font-size: clamp(0.8rem, 2vw, 1rem);
         padding: 0.5rem 1vw;
@@ -134,6 +149,7 @@
   &__hamburger {
     display: none;
     cursor: pointer;
+
     @media screen and (max-width: 768px) {
       display: block;
     }
@@ -154,6 +170,7 @@
   .header__nav {
     padding: 0.5rem 1rem;
   }
+
   .header__nav--menu {
     display: none;
     flex-direction: column;
@@ -164,6 +181,7 @@
     left: 0;
     z-index: 1000;
   }
+
   .header__nav--menu.open {
     display: flex;
   }
